# PlanningTreev2

./: .env.example  .gitignore  electron-builder.yml  package-lock.json  package.json  planningtree-server.spec  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& cUsersThongPlanningTreeMain.venvScriptsActivate.ps1)
.claude/: settings.local.json
backend/: main.py  requirements-build.txt  requirements-dev.txt  requirements.txt  server_entry.py  split_contract.py
docs/: AGENT_RULES.md  ARCHITECTURE.md  FEATURE_MIGRATION_QUEUE.md  FOLDER_STRUCTURE.md  MIGRATION_PLAN.md  TEST_STRATEGY.md  goose-mcp-chuc-nang-va-vi-du.md
electron/: app-menu.js  backend-manager.js  logger.js  main.js  preload.js  window-state.js
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
launcher/: cli.js
scripts/: ask_phase_a1_gate_report.py  ask_phase_a1_idempotency_integration.py  ask_phase_a1_retry_replay_suite.py  ask_phase_a1_start_turn_latency_probe.py  ask_phase_a2_gate_report.py  ask_phase_a2_source_evidence.py  ask_phase_a3_gate_report.py  ask_phase_a4_confirmation_noise_audit.py  ask_phase_a4_confirmation_transition_suite.py  ask_phase_a4_gate_report.py  ask_phase_a4_risk_policy_tests.py  ask_phase_a5_gate_report.py  ask_phase_a5_queue_interaction_smoke.py  ask_phase_a5_queue_ui_actions_suite.py  ask_phase_a5_shell_visibility_regression_suite.py  ask_phase_a6_gate_report.py  ask_phase_a6_reconnect_duplicate_guard_suite.py  ask_phase_a6_reload_recovery_suite.py  ask_phase_a7_gate_report.py  (+71 more)
(+1540 files in other folders)
